# l402-kit

./: .env.example  .gitignore  BLUEPRINT.md  CONTRIBUTING.md  DEVTO_ARTICLE_DRAFT.md  DISCORD_MESSAGES_DRAFT.md  Dockerfile  FLOW.md  PLANO_MASTER_STATUS.md  README.md  SHOW_HN_DRAFT.md  WHITEPAPER.md  bump.ps1  demo_agent.py  demo_agent_economy.py  demo_record.py  glama.json  healthcheck.ps1  llms.txt  make_demo_gif.py  make_flow_gif.py  make_gif.py  monitor.mjs  package-lock.json  package.json  test_e2e.py  tsconfig.json  wrangler.jsonc
.github/workflows/: deploy-worker.yml
backend/: checkout.html  dashboard.html  demo.html  dev.html  index.html  package-lock.json  package.json  sitemap.xml  vercel.json
backend/api/: blink-webhook.ts  delete-data.d.ts  delete-data.js  delete-data.ts  demo.ts  dev-stats.ts  dev-token.ts  invoice.ts  lnurl-auth.d.ts  lnurl-auth.js  lnurl-auth.ts  lnurlp.ts  pro-check.ts  pro-poll.ts  pro-subscribe.ts  resend-webhook.ts  split.ts  stats.ts  verify.ts  waitlist.ts
cloudflare/: package-lock.json  package.json  tsconfig.test.json  wrangler.toml
cloudflare/scripts/: set-secrets.mjs
cloudflare/src/: docs-proxy.ts  worker.ts
docs/: api-reference.mdx  competitive.mdx  introduction.mdx  mint.json  payment-layer.mdx  providers.mdx  quickstart.mdx  whitepaper.mdx
docs/agent/: autogpt.mdx  budget.mdx  crewai.mdx  delegation.mdx  langchain.mdx  mcp.mdx  openai-agents.mdx  quickstart.mdx  system-prompt.mdx  vercel-ai.mdx  wallet-quickstart.mdx  wallets.mdx
docs/ar/: introduction.mdx
docs/de/: introduction.mdx
docs/es/: introduction.mdx
docs/fr/: introduction.mdx
docs/guides/: ai-agents.mdx  dashboard.mdx  dns-discovery.mdx  flows.mdx  lnurl.mdx  privacy.mdx  production.mdx  security.mdx  troubleshooting.mdx
docs/hi/: introduction.mdx
docs/it/: introduction.mdx
docs/ja/: introduction.mdx
docs/pt/: introduction.mdx
docs/reference/: errors.mdx
docs/ru/: introduction.mdx
docs/sdk/: go.mdx  python.mdx  rust.mdx  typescript.mdx
docs/zh/: introduction.mdx
examples/ai-agent/: index.ts
examples/express-basic/: index.ts
extension/: package.json
extension/src/: dashboard.ts  (+1 more)
go/: README.md  errors.go  go.mod  l402kit.go  l402kit_test.go  middleware.go  providers.go  replay.go  verify.go  webhook.go
mcp/: server.ts  tsconfig.json
python/: README.md  pyproject.toml
python/examples/: fastapi_example.py  flask_example.py  gradio_example.py
python/l402kit/: __init__.py  client.py  dev.py  langchain.py  middleware.py  replay.py  types.py  verify.py  webhook.py
python/l402kit/providers/: __init__.py  blink.py  lnbits.py  managed.py  opennode.py
python/l402kit/wallets/: __init__.py  alby.py  blink.py
python/tests/: test_agent.py  test_l402kit.py  test_providers.py
rust/: Cargo.toml  README.md
rust/examples/: basic.rs
rust/src/: errors.rs  lib.rs  managed.rs  middleware.rs  replay.rs  types.rs  verify.rs
rust/tests/: core_test.rs
scripts/: demo.cast  deploy-landing.sh  gen-demo-cast.mjs  open-dashboard.ps1  test-all.sh
src/: client.ts  index.ts  lightning.ts  managed.ts  middleware.ts  replay.ts  split.ts  types.ts  verify.ts  webhook.ts
supabase/: config.toml  schema.sql
tests/: audit-ui.sh  benchmark.sh  smoke.sh
vscode-extension/: .vscodeignore  LICENSE  README.md  jest.config.js  package-lock.json  package.json  shinydapps-l402-0.1.0.vsix  shinydapps-l402-0.2.0.vsix  shinydapps-l402-0.4.0.vsix  shinydapps-l402-0.5.0.vsix  shinydapps-l402-0.6.0.vsix  shinydapps-l402-0.7.0.vsix  shinydapps-l402-0.8.0.vsix  shinydapps-l402-0.9.0.vsix  shinydapps-l402-0.9.1.vsix  shinydapps-l402-0.9.2.vsix  shinydapps-l402-1.0.0.vsix  shinydapps-l402-1.0.1.vsix  shinydapps-l402-1.0.6.vsix  shinydapps-l402-1.0.7.vsix  shinydapps-l402-1.0.8.vsix  shinydapps-l402-1.0.9.vsix  shinydapps-l402-1.1.0.vsix  shinydapps-l402-1.1.1.vsix  shinydapps-l402-1.1.2.vsix  shinydapps-l402-1.1.3.vsix  shinydapps-l402-1.1.4.vsix  shinydapps-l402-1.1.5.vsix  shinydapps-l402-1.1.6.vsix  shinydapps-l402-1.1.7.vsix  shinydapps-l402-1.1.8.vsix  shinydapps-l402-1.1.9.vsix  shinydapps-l402-1.2.0.vsix  shinydapps-l402-1.2.1.vsix  shinydapps-l402-1.3.0.vsix  shinydapps-l402-1.3.1.vsix  shinydapps-l402-1.4.1.vsix  test-preview.html  tsconfig.json
(+54 files in other folders)
