[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "l402kit"
version = "0.4.0"
description = "Add Bitcoin Lightning pay-per-call to any API in 3 lines. L402 protocol for FastAPI and Flask. 0.3% fee, zero config."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110"]
flask = ["flask>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "fastapi>=0.110",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://shinydapps-bd9fa40b.mintlify.app"
Documentation = "https://shinydapps-bd9fa40b.mintlify.app"
Repository = "https://github.com/ShinyDapps/l402-kit"
"npm package" = "https://npmjs.com/package/l402-kit"
