[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "l402kit"
version = "1.8.0"
description = "Add Bitcoin Lightning pay-per-call to any API in 3 lines. L402 protocol for FastAPI and Flask. 0.3% fee, zero config."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
  "l402", "lightning", "bitcoin", "btc", "crypto", "cripto", "cryptocurrency",
  "criptomoeda", "blockchain", "web3", "http402", "micropayments", "pay-per-call",
  "payment-gateway", "lightning-network", "bolt11", "satoshi", "sats", "lnurl",
  "blink", "lnbits", "opennode", "monetize", "api-monetization", "api-billing",
  "api-gateway", "paywall", "metered-api", "fastapi", "flask", "middleware",
  "ai-agent", "llm", "machine-learning",
  "wallet", "lightning-wallet", "crypto-wallet", "bitcoin-wallet",
  "api", "developer", "developer-tools", "tools", "sdk",
  "dapps", "dapp", "decentralized", "decentralized-app",
  "defi", "defi-payment", "layer2", "layer-2", "l2"
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110"]
flask = ["flask>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "fastapi>=0.110",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://l402kit.com"
Documentation = "https://l402kit.com/docs"
Repository = "https://github.com/ShinyDapps/l402-kit"
"npm package" = "https://npmjs.com/package/l402-kit"
